--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -147,7 +147,6 @@ g11dSupportEnabled=0
 
 # CCX Support and fast transition
 EseEnabled=0
-FastTransitionEnabled=1
 ImplicitQosIsEnabled=0
 gNeighborScanTimerPeriod=200
 
@@ -159,9 +158,11 @@ gNeighborScanChannelMinTime=20
 gNeighborScanChannelMaxTime=30
 
 # Legacy (non-CCX, non-802.11r) Fast Roaming Support
-# To enable, set FastRoamEnabled=1
-# To disable, set FastRoamEnabled=0
+# To enable, set FastRoamEnabled=1, gEnableFWRssiMonitoring=1, FastTransitionEnabled=1
+# To disable, set FastRoamEnabled=0, gEnableFWRssiMonitoring=0, FastTransitionEnabled=0
 FastRoamEnabled=1
+gEnableFWRssiMonitoring=1
+FastTransitionEnabled=1
 
 #Check if the AP to which we are roaming is better than current AP in terms of RSSI.
 #Checking is disabled if set to Zero.Otherwise it will use this value as to how better
@@ -281,6 +282,7 @@ gAPChannelSelectOperatingBand=0
 
 #Channel Bonding
 gChannelBondingMode5GHz=1
+gChannelBondingMode24GHz=1
 
 gEnableModulatedDTIM = 3
 gMaxLIModulatedDTIM = 3
@@ -362,6 +364,9 @@ gRrmRandIntvl=100
 #Scan offload
 gEnableDirectedScanOffload=0
 
+#Enable Power Save offload
+gEnablePowerSaveOffload=4
+
 #FlexConnect Power Factor
 #Default is set to 0 (disable)
 gFlexConnectPowerFactor=0
@@ -389,20 +394,42 @@ gEnableTDLSWmmMode=1
 #Enable/Disable TDLS Buffer Sta
 gEnableTDLSBufferSta=1
 
-#Enable/Disable Mgmt Frame Logging
-gEnableMgmtLogging=1
-
 #Enable/Disable MAc Spoofing
 gEnableMacAddrSpoof=1
 
 #Set RPS CPU mask
 rps_mask=0f
 
-#wuzhiyong wifi bt coexistence
-gBtcStaticOppWlanIdleWlanLen=30000
-gBtcStaticOppWlanIdleBtLen=120000
+#Enable / Disable MCC feature
+#Enable(1) / Disable(0)
+gEnableMCCMode=1
+
+#Disable Aggregation with BTC to have better throughput, but sometimes will not recover. So we enabble it.
+gDisableAggWithBTC=0
+
+#Enable/Disable Driver/FW related logging
+gMulticastHostMsgs=0
+gEnableDebugLog=0
+wlanLoggingEnable=0
+wlanLoggingFEToConsole=1
+gEnableFWLogging=0
+gEnableContFWLogging=0
+gEnableMgmtLogging=0
+
+# Add support to disable forwarding of BAR frames
+gDisableBarWakeUp=0
+
+#FW will not send CA event to host everytime if wlan is not GO/SoftAP mode
+gOptimizeCAevent=1
+
+#Disable gscan
+gEnableEXTScan=0
+
+# Perform PNO fast scan this many number of times
+gPNOScanTimerRepeatValue=4
 
 END
 
 # Note: Configuration parser would not read anything past the END marker
+
 
